# spam-db

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  example.csv  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml
spam_db/: community_database_loader.py  create_database.py  database_dataslice_node_trie.py  downloader.py
