[project]
name = "spam-db"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = ["pandas", "requests>=2.32.3"]

[dependency-groups]
dev = [
  "black",
  "flake8",
  "flake8-bugbear",
  "flake8-pyproject",
  "flake8-simplify",
  "isort",
  "mypy",
  "pre-commit",
  "pylint",
  "ruff",
]

[tool.black]
line-length = 90
target-version = ["py312"]
# skip-magic-trailing-comma = true

[tool.ruff]
target-version = "py312"
line-length = 90
lint.select = ["ALL"]

[tool.isort]
profile = "black"
line_length = 90
float_to_top = true
known_third_party = ["wandb"]

[tool.flake8]
max-line-length = 90
extend-ignore = ["E203"] # Whitespace before ':' for black compatability

[tool.pylint]
py-version = "3.12"
max-line-length = 90
disable = [
  "C0116", # documentation
  "C0114", # documentation
  "C0115", # documentation
]

[tool.mypy]
python_version = "3.12"
strict = false            # it's too strict to be useful
show_error_context = true
pretty = true
# ignore_missing_imports = true # ignore packages without type-checking
